<resources>
    <string name="app_name">Thesis Android App</string>
    <string name="start_scan">Scan</string>
    <string name="scan_button">Scan button</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="navigation">Navigation</string>
    <string name="scan">Scan</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="origin">Origin</string>
    <string name="destination">Destination</string>
    <string name="route">Route</string>
</resources>