<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ScanFragment">

    <ListView
        android:id="@+id/wifiList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/minusYButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:icon="@drawable/minus"
        android:text="@string/y"
        app:layout_constraintBottom_toTopOf="@id/plusYButton"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/plusYButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:icon="@drawable/plus"
        android:text="@string/y"
        app:layout_constraintBottom_toTopOf="@id/minusXButton"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/minusXButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:icon="@drawable/minus"
        android:text="@string/x"
        app:layout_constraintBottom_toTopOf="@id/plusXButton"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/plusXButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        app:icon="@drawable/plus"
        android:text="@string/x"
        app:layout_constraintBottom_toTopOf="@id/scanButton"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/scanButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:src="@drawable/scan"
        android:contentDescription="@string/scan_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <TextView
        android:id="@+id/counter"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/XCoord"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp" />
    <TextView
        android:id="@+id/XCoord"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/counter"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />
    <TextView
        android:id="@+id/YCoord"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/XCoord"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />
    <TextView
        android:id="@+id/ZCoord"
        android:textSize="22sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/YCoord"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>